project update complete

--- a/styles.css
+++ b/styles.css
@@ -10,16 +10,23 @@ CSS VARIABLES
   /* colors */
 --clr-dark:#0c090d;
 --clr-light:#ffffff;
---clr-highlight:#ECE9D8;
+--clr-highlight:#e2e9ee;
 --clr-primary:#eb644d;
+--clr-purple: #9370db;
+--clr-red-dark: hsl(360, 67%, 44%);
+  --clr-red-light: hsl(360, 71%, 66%);
+  --clr-green-dark: hsl(125, 67%, 44%);
+  --clr-green-light: hsl(125, 71%, 66%);
 --clr-grey:#575757;
+--clr-red-gradient: linear-gradient(to bottom right, #ee3322, #d23669);
+--clr-purple-gradient: linear-gradient(to bottom right, #ba55d3, #9370db);
   /* transitions */
 --transition: all 0.3s linear;
 --long-transition: all 1.5s ease;
   /* spacing */
 --spacing: 0.25rem;
   /* radius */
---radius: 0.65rem;
+--radius: 0.25rem;
   /* box shadow */
 --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
 --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
@@ -84,21 +91,22 @@ p {margin-bottom: 1.25rem;}
 
 .btn {
 text-transform: uppercase;
-background: var(--clr-primary);
-color: var(--clr-dark);
+background: var(--clr-purple-gradient);
+color: var(--clr-light);
 padding: 0.6rem 0.9rem;
 letter-spacing: var(--spacing);
 display: inline-block;
 font-weight: 700;
 transition: var(--transition);
 font-size: 1rem;
-border: 2px solid var(--clr-primary);
+border: 2px solid ;
 cursor: pointer;
 box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+opacity: 0.9;
 }
 .btn:hover {
 background: transparent;
-color: var(--clr-primary);
+opacity: 1;
 }
 .btn:focus{
 outline: none;
@@ -139,16 +147,14 @@ HEADER
 }
 .hero-banner{
   text-align: center;
-  /* margin-top: -8rem; */
 }
 
 .game-title{
 margin-bottom:4rem;
-/* margin-top: -4rem; */
 text-align: center;
 text-transform: uppercase;
 color: var(--clr-light);
-text-shadow: 5px 5px 5px var(--clr-primary);
+text-shadow: 5px 5px 5px var(--clr-red-dark);
 padding: 1rem;
 }
 
@@ -170,13 +176,16 @@ padding: 1rem;
   font-size: 2rem;
   border-radius: 0;
   padding: 0.5rem 1rem;
-  background: transparent;
   color: var(--clr-light);
-  border-color: var(--clr-light);
+  transition: var(--transition);
+  background: var(--clr-red-gradient);
+}
+.hero-btn:hover{
+  transform: scale(1.05);
+  background: var(--clr-red-gradient);
 }
 .hero-btn i{
   font-size: 2.3rem;
-  color: var(--clr-primary);
 }
 
 
@@ -198,8 +207,16 @@ GAME
   margin-top: 0;
 }
 
+.btns-container{
+  max-width: 40rem;
+  margin: 0 auto 4rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  place-items: center;
+}
+
 .player-block{
-  background: var(--clr-light);
+  background: rgb(245, 245, 245);
   padding: 3rem 2rem;
   text-align: center;
 }
@@ -209,12 +226,12 @@ GAME
   position: relative;
 }
 .player-score{
-  color: var(--clr-primary);
+  color: var(--clr-purple);
   margin-bottom: 7rem;
 }
 
 .current-score-box{
-  background: var(--clr-primary);
+  background: var(--clr-red-gradient);
   display: inline-block;
   padding: 1.5rem;
   padding-bottom: 0.5rem;
@@ -222,7 +239,7 @@ GAME
 }
 .current-score-label{
   text-transform: uppercase;
-  color: var(--clr-dark);
+  color: var(--clr-light);
 }
 .player-current-score{
   color: var(--clr-light);
@@ -232,6 +249,9 @@ button i{
   color: var(--clr-light);
   margin-right: 1rem;
   font-size: 1.2rem;
+}
+.btn-new{
+  background: var(--clr-red-gradient);
 }
 
 .dice{
@@ -254,93 +274,58 @@ button i{
 
 .form-control{
   outline: none;
-  border: 2px solid var(--clr-light);
+  border: 2px solid transparent;
   padding: 0.6rem 0.9rem;
   font-size: 1rem;
   text-align: center;
-	background: linear-gradient(rgba(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9));
-  color: var(--clr-grey);
+  background: var(--clr-red-gradient);
+  color: var(--clr-light);
+  width: 15rem;
+  border-radius: var(--radius);
 }
 .form-control::placeholder{
-  color: var(--clr-grey);
+  color: var(--clr-light);
 }
 
+.btn-roll:hover, .btn-hold:hover{
+  background: transparent;
+  color: var(--clr-purple);
+  border-color: var(--clr-purple);
+}
+.btn-roll:hover i, .btn-hold:hover i{
+  color: var(--clr-purple);
+}
 /* ******************************************************** */
 .game-center{
+  background: var(--clr-light);
   display: grid;
-  grid-template-columns:[start] 1fr [col-1] 270px [col-2] 1fr [end];
-  grid-template-rows:[start] auto [row-1] 1fr [row-2] auto [end];
+  grid-template-columns: 1fr 300px 1fr;
 }
 .btn-new{
-  grid-column: start/end;
-  grid-row: start/row-1;
-  width: 100%;
+  width: 15rem;
+  border-radius: var(--radius);
   color: var(--clr-light);
-  background: var(--clr-dark);
-  border-color:var(--clr-dark) ;
-  border-top-left-radius: var(--radius) ;
-  border-top-right-radius: var(--radius) ;
+  border-color: transparent;
 }
-.btn-new:hover{
-  color: var(--clr-light);
-  background: var(--clr-dark);
-}
-.player-0-cell{
-  grid-column: start/col-1;
-  grid-row: row-1/row-2;
+.btn-new:hover {
+  background: var(--clr-red-gradient);
 }
 .dice-roll-cell{
   padding: 3rem 1rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  grid-column: col-1/col-2;
-  grid-row: row-1/row-2;
-}
-.player-1-cell{
-  grid-column: col-2/end;
-  grid-row: row-1/row-2;
-}
-.form-control{
-  grid-column: start/end;
-  grid-row: row-2/end;
-  width: 100%;
-  border-bottom-left-radius: var(--radius) ;
-  border-bottom-right-radius: var(--radius) ;
 }
 
 @media screen and (max-width:800px) {
 .game-center{
-  grid-template-columns:[start] 1fr [col-1] 1fr [end];
-  grid-template-rows:[start] auto [row-1] 1fr [row-2] 1fr [row-3] 1fr [end];
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr auto 1fr;
 }
-.btn-new{
-  grid-column: start/col-1;
-  grid-row: start/row-1;
-  border-color: var(--clr-primary);
-  border-bottom: none;
-}
-.player-0-cell{
-  grid-column: start/end;
-  grid-row: row-1/row-2;
-}
-.dice-roll-cell{
-  grid-column: start/end;
-  grid-row: row-2/row-3;
-}
-.player-1-cell{
-  grid-column: start/end;
-  grid-row: row-3/end;
-}
-.form-control{
-  grid-column: col-1/end;
-  grid-row: start/row-1;
-  border-color: var(--clr-primary);
-  border-bottom: none;
-  border-radius: 0;
-  border-top-left-radius: var(--radius) ;
-  border-top-right-radius: var(--radius) ;
-  
+.btns-container {
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 1rem;
 }
 .grid-set{
   display: grid;
@@ -415,13 +400,11 @@ button i{
 background: var(--clr-highlight);
 }
 .winner .player-name{
-color: var(--clr-primary);
+color: var(--clr-red-dark);
 font-weight: bold;
-/* font-size: 3rem; */
 }
 .winner .player-score{
-color: var(--clr-dark);
-/* font-size: 4rem; */
+color: var(--clr-red-dark);
 }
 
 
